possible fix to dark mode.

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -8,6 +8,10 @@ html, body {
     hyphens: auto;
 }
 
+:root {
+    color-scheme: light only;
+}
+
 h1, h2 ,h3 {
     font-weight: bold;
 }
